# xp-aws-cognito

./: CLAUDE.md  README.md
.claude/: settings.local.json
android-client/: settings.gradle.kts
android-client/app/: build.gradle.kts
android-client/gradle/: libs.versions.toml
android-client/gradle/wrapper/: gradle-wrapper.properties
ios-client/: ARCHITECTURE.md  CLAUDE.md  README.md
ios-client/AWSCognito/: Debug.xcconfig  Info.plist
ios-client/AWSCognito/AWSCognito/: AWSCognitoApp.swift  ContentView.swift
ios-client/AWSCognito/AWSCognito.xcodeproj/: project.pbxproj
ios-client/AWSCognito/AWSCognitoTests/: AWSCognitoTests.swift
ios-client/AWSCognito/AWSCognitoUITests/: AWSCognitoUITests.swift  AWSCognitoUITestsLaunchTests.swift
nextjs-client/: next.config.ts  package-lock.json  package.json
nextjs-client/.claude/: settings.local.json
nextjs-client/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
nextjs-client/app/(protected)/: layout.tsx
nextjs-client/app/(public)/: layout.tsx  page.tsx
nextjs-client/components/: AmplifyProvider.tsx  AppHeader.tsx  AppleSignInButton.tsx  AuthGuard.tsx  ChangePassword.tsx  DashboardContent.tsx  GoogleSignInButton.tsx  HomeContent.tsx  LoadingSpinner.tsx  LoginPanel.tsx  Navigation.tsx  TabNavigation.tsx  UserManagement.tsx
nextjs-client/config/: constants.ts  env.ts
nextjs-client/features/: index.ts
nextjs-client/hooks/: index.ts
nextjs-client/lib/: amplify-config.ts  auth-context.tsx
nextjs-client/types/: api.ts  auth.ts  global.d.ts
server/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  middleware.py
server/app/api/: __init__.py  deps.py  router.py
server/app/api/v1/: __init__.py  auth.py  messages.py  users.py
server/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  security.py
server/app/providers/: __init__.py  apple.py  cognito.py  google.py
server/app/repositories/: __init__.py  user_repository.py
server/app/routers/: __init__.py  auth.py  feed.py  messages.py  users.py
server/app/schemas/: __init__.py  auth.py  common.py  messages.py  users.py
server/app/services/: __init__.py  auth_service.py  jwks_service.py  user_service.py
server/tests/: __init__.py  conftest.py
(+161 files in other folders)
